# axum-google-oauth2

./: Cargo.toml  Readme.md
RandomDocuments/: security_analysis_claude.ai.md
src/: idtoken.rs  main.rs
templates/: index_anon.j2  index_user.j2
