[package]
name = "axum-google-oauth2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
async-session = "3.0.0"
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = "0.4.39"
dashmap = "6.1.0"
dotenv = "0.15.0"
http = "1.2.0"
jsonwebtoken = "9.3.0"
moka = { version = "0.12.10", features = ["future"] }
once_cell = "1.20.2"
pkcs1 = "0.7.5"
rand = "0.8"
reqwest = { version = "0.12.12", features = ["json"] }
rsa = "0.9.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
urlencoding = "2.1.3"
